--- a/11_getTheTitles/index.html
+++ b/11_getTheTitles/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hello</h2>
-    <script src='refresher.js'></script>
+    <script src="getTheTitles.js"></script>
 </body>
 </html>
