--- a/12_findTheOldest/index.html
+++ b/12_findTheOldest/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hello</h2>
-    <script src='refresher.js'></script>
+    <script src="redo.js">
+    
+    </script>
 </body>
 </html>
